--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
         }
     },
     "autoload-dev": {
+        "files": [
+            "app/helper.php"  
+        ],
         "psr-4": {
             "Tests\\": "tests/"
         }
